# squishy-object

./: CMakeLists.txt  Camera.cpp  Face.cpp  Face.h  Makefile  Matrix.cpp  Mesh.cpp  Mesh.h  Object.cpp  Object.h  README.md  Shader.cpp  Shader.h  Solver.cpp  Solver.h  SpringyMesh.cpp  SpringyMesh.h  SpringyObject.cpp  SpringyObject.h  Strut.cpp  Strut.h  Utility.cpp  Vector.cpp  Vector.h  VertexParticle.cpp  VertexParticle.h  main.cpp  parameters  parameters_box  parameters_mac  parameters_test  shader.frag  shader.vert
